--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 				the relevant stages.
 			</p>
 			<ul class="actions">
-				<li><a href="CanerOzus.CV.pdf" class="button">Full Portfolio</a></li>
+				<li><a href="CanerOzusCv.pdf" class="button">Full Portfolio</a></li>
 			</ul>
 		</section>
 
