--- a/index.html
+++ b/index.html
@@ -82,10 +82,22 @@
 					<p>This is a simple blog application built with the MERN stack. The app allows users to create, edit and delete posts, and register/login to the app. It also features server-side rendering for SEO optimization, and uses Amazon AWS S3 for storing and retrieving images.</p>
 				</article>
 				<article class="col-6 col-12-xsmall work-item">
+					<span class="tech">Full-Stack</span>
+					<a href="images\finance.png" class="image fit thumb"><img src="images\finance.png" alt="" /></a>
+					<h3 class="project"><a href="https://financeor.vercel.app" target="_blank">Finance App</a></h3>
+					<p>Welcome to the Finance Dashboard project! This is a full-stack application built using the MERN stack. The application provides users with a comprehensive dashboard for monitoring and managing their financial data. With intuitive charts, data grids, and analysis tools, users can gain valuable insights into their financial health and make informed decisions.</p>
+				</article>
+				<article class="col-6 col-12-xsmall work-item">
 					<span class="tech">Front-End</span>
 					<a href="images\Reddit.png" class="image fit thumb"><img src="images\Reddit.png" alt="" /></a>
 					<h3 class="project"><a href="https://minimal-red.netlify.app" target="_blank">Reddit Minimal</a></h3>
 					<p>This is a web application built with Reddit API, React, Redux and CSS. The app allows users to browse and search Reddit posts and comments in real-time.</p>
+				</article>
+				<article class="col-6 col-12-xsmall work-item">
+					<span class="tech">Front-End</span>
+					<a href="images\crypto.png" class="image fit thumb"><img src="images\crypto.png" alt="" /></a>
+					<h3 class="project"><a href="https://crypto-app-virid.vercel.app" target="_blank">Crypto App</a></h3>
+					<p>Welcome to the Crypto App project! This application provides users with real-time information and news about cryptocurrencies. It utilizes the Coinranking API to fetch currency data and the Bing News API to fetch the latest news related to cryptocurrencies. The app features a news page, a list of currencies, and detailed information about each currency when clicked.</p>
 				</article>
 				<article class="col-6 col-12-xsmall work-item">
 					<span class="tech">Front-End</span>
