--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 			<header class="major">
 				<h2>And This is My Story</h2>
 			</header>
-			<p>In the Summer of 2023, I will graduate from Bandirma Onyedi Eylul University Management
+			<p> I graduated from Bandirma Onyedi Eylul University Management
 				Information Systems Department, I have been focusing mainly on Full-Stack Web Development
 				technologies for more than 1 year. In this process, I can say that I have gained all the
 				requirements of a developer and that I have the knowledge and experience of a Computer
@@ -46,7 +46,7 @@
 				bringing
 				me the necessary competence. <br /> <br />In the process of being a developer, I used
 				technologies such as<strong>
-					HTML, CSS, React, Vue, Bootstrap, Tailwindcss, MaterialUI, MongoDB, MySQL, NodeJs, ExpressJs
+					HTML, CSS, React.js, Next.js Vue, Bootstrap, Tailwindcss, MaterialUI, MongoDB, MySQL, NodeJs, ExpressJs
 				</strong>and many more related technologies written in my CV. Although I am mainly a React and Nodejs
 				developer, I can easily adapt to other software languages and technologies. <br /> <br />In
 				addition to my
